Even more refined: generating disassambly by calling make asm

--- a/Fibonacci/Makefile
+++ b/Fibonacci/Makefile
@@ -10,10 +10,19 @@ objects = ../output/Fibonacci.o ../output/FibonacciInConstantTime.o
 ../output/Fibonacci.o: Fibonacci.cc FibonacciInConstantTime.h HorribleRecursiveFibonacci.h BasicLoopFibonacci.h BasicRecursiveFibonacci.h LogarithmicFibonacciUsingMatrices.h FibonacciWithoutLoopsOrRecursion.h 
 	g++ -c -std=c++11 -O2 $< -o $@ 
 
-../output/FibonacciInConstantTime.o : FibonacciInConstantTime.cc FibonacciInConstantTime.h
+../output/FibonacciInConstantTime.o: FibonacciInConstantTime.cc FibonacciInConstantTime.h
 	g++ -c -std=c++11 -O2 $< -o $@ 
 
 # Make the program, then run it immediately.
 # This technique can also be used for unit testing. 
-run : ../output/Fibonacci
+run: ../output/Fibonacci
 	../output/Fibonacci
+
+# Create assembler code. Caveat: this may be a problem if the compilation flags are not identical to those in the actual compilation. 
+asm: ../output/Fibonacci $(objects)
+	# create assembler code:
+	g++ -S -fverbose-asm -g -O2 -std=c++11 Fibonacci.cc -o Fibonacci.s
+	# create asm interlaced with source lines:
+	as -alhnd Fibonacci.s > Fibonacci.asm
+	# create asm from the binary
+	objdump -S --disassemble ../output/Fibonacci > Fibonacci.dump
