--- a/Fibonacci/Makefile
+++ b/Fibonacci/Makefile
@@ -1,24 +1,30 @@
 # Even though this is a smallish project, a second object file (FibonacciInConstantTime.o) was added, 
 # since it seldom changes, and may take some time to compile.
-objects = ../output/Fibonacci.o ../output/FibonacciInConstantTime.o 
+objects = ../output/Fibonacci.o ../output/FibonacciInConstantTime.o ../output/Performance.o
+implementations = FibonacciInConstantTime.h HorribleRecursiveFibonacci.h BasicLoopFibonacci.h BasicRecursiveFibonacci.h LogarithmicFibonacciUsingMatrices.h FibonacciWithoutLoopsOrRecursion.h
 
 # The default target is the executable
 # Note the output folder is not the source folder.
 ../output/Fibonacci: $(objects)
 	g++ -o ../output/Fibonacci $(objects) 
 
-../output/Fibonacci.o: Fibonacci.cc FibonacciInConstantTime.h HorribleRecursiveFibonacci.h BasicLoopFibonacci.h BasicRecursiveFibonacci.h LogarithmicFibonacciUsingMatrices.h FibonacciWithoutLoopsOrRecursion.h 
+../output/Fibonacci.o: Fibonacci.cc  Performance.h $(implementations)
 	g++ -c -std=c++11 -O2 $< -o $@ 
 
-../output/FibonacciInConstantTime.o: FibonacciInConstantTime.cc FibonacciInConstantTime.h
-	g++ -c -std=c++11 -O2 $< -o $@ 
+../output/FibonacciInConstantTime.o: FibonacciInConstantTime.cc FibonacciInConstantTime.h  
+	g++ -c -std=c++11 -O2 $< -o $@
+	
+../output/Performance.o: Performance.cc Performance.h $(implementations)
+	g++ -c -std=c++11 -O2 $< -o $@ 	
 
 # Make the program, then run it immediately.
 # This technique can also be used for unit testing. 
 run: ../output/Fibonacci
 	../output/Fibonacci
 
-# Create assembler code. Caveat: this may be a problem if the compilation flags are not identical to those in the actual compilation. 
+# Create assembler code. 
+# Caveat: If the compilation flags are not identical to those in the actual compilation, the .asm file will not mathc 'reality'.
+#         Always look at the .dump file, which is the one that will tell you the truth. 
 asm: ../output/Fibonacci $(objects)
 	# create assembler code:
 	g++ -S -fverbose-asm -g -O2 -std=c++11 Fibonacci.cc -o Fibonacci.s
@@ -26,3 +32,7 @@ asm: ../output/Fibonacci $(objects)
 	as -alhnd Fibonacci.s > Fibonacci.asm
 	# create asm from the binary
 	objdump -S --disassemble ../output/Fibonacci > Fibonacci.dump
+
+clean: 
+	# remove the compilation results
+	rm $(objects) ../output/Fibonacci Fibonacci.s Fibonacci.asm Fibonacci.dump Fibonacci.dump.asm
