One more .cc file, improved performance in the logarithmic version

--- a/Fibonacci/Makefile
+++ b/Fibonacci/Makefile
@@ -1,21 +1,24 @@
-# Even though this is a smallish project, a second object file (FibonacciInConstantTime.o) was added, 
-# since it seldom changes, and may take some time to compile.
-objects = ../output/Fibonacci.o ../output/FibonacciInConstantTime.o ../output/Performance.o
+# Variables
+objects = ../output/Fibonacci.o ../output/FibonacciInConstantTime.o ../output/Performance.o ../output/LogarithmicFibonacciUsingMatrices.o
 implementations = FibonacciInConstantTime.h HorribleRecursiveFibonacci.h BasicLoopFibonacci.h BasicRecursiveFibonacci.h LogarithmicFibonacciUsingMatrices.h FibonacciWithoutLoopsOrRecursion.h
-
+# versions of g++ earlier than 4.8 may require std=c++0x
+flags=-std=c++11 -O3
 # The default target is the executable
 # Note the output folder is not the source folder.
 ../output/Fibonacci: $(objects)
 	g++ -o ../output/Fibonacci $(objects) 
 
 ../output/Fibonacci.o: Fibonacci.cc  Performance.h ansi.h $(implementations) 
-	g++ -c -std=c++11 -O2 $< -o $@ 
+	g++ -c $(flags) $< -o $@ 
 
 ../output/FibonacciInConstantTime.o: FibonacciInConstantTime.cc FibonacciInConstantTime.h  
-	g++ -c -std=c++11 -O2 $< -o $@
+	g++ -c $(flags) $< -o $@
 	
 ../output/Performance.o: Performance.cc Performance.h ansi.h $(implementations)
-	g++ -c -std=c++11 -O2 $< -o $@ 	
+	g++ -c $(flags) $< -o $@ 	
+	
+../output/LogarithmicFibonacciUsingMatrices.o: LogarithmicFibonacciUsingMatrices.cc LogarithmicFibonacciUsingMatrices.h 
+	g++ -c $(flags) $< -o $@ 	
 
 # Make the program, then run it immediately.
 # This technique can also be used for unit testing. 
@@ -23,16 +26,18 @@ run: ../output/Fibonacci
 	../output/Fibonacci
 
 # Create assembler code. 
-# Caveat: If the compilation flags are not identical to those in the actual compilation, the .asm file will not mathc 'reality'.
+# Caveat: If the compilation flags are not identical to those in the actual compilation, the .asm file will not match 'reality'.
 #         Always look at the .dump file, which is the one that will tell you the truth. 
-asm: ../output/Fibonacci $(objects)
+asm: ../output/Fibonacci $(objects) 
 	# create assembler code:
-	g++ -S -fverbose-asm -g -O2 -std=c++11 Fibonacci.cc -o Fibonacci.s
+	g++ -S -fverbose-asm -g $(flags) Fibonacci.cc -o Fibonacci.s
+	g++ -S -fverbose-asm -g $(flags) Performance.cc -o Performance.s
 	# create asm interlaced with source lines:
 	as -alhnd Fibonacci.s > Fibonacci.asm
+	as -alhnd Performance.s > Performance.asm
 	# create asm from the binary
 	objdump -S --disassemble ../output/Fibonacci > Fibonacci.dump
 
 clean: 
 	# remove the compilation results
-	rm $(objects) ../output/Fibonacci Fibonacci.s Fibonacci.asm Fibonacci.dump Fibonacci.dump.asm
+	rm $(objects) ../output/Fibonacci Fibonacci.s Fibonacci.asm Fibonacci.dump 
