--- a/hello/Makefile
+++ b/hello/Makefile
@@ -1,4 +1,4 @@
-all: ../output/hello-cpp-world ../output/hello-c-world ../output/hello-chrono ../output/delegating_constructor ../output/hello-threads 
+all: ../output/hello-cpp-world ../output/hello-c-world ../output/hello-chrono ../output/delegating_constructor ../output/hello-threads ../output/hello-unicode  
 
 %: %.cc
 	g++ -std=c++11 -O2 -Wl,--no-as-needed -lpthread $< -o ../output/$@
