fixed c++98 version of stringswitch

--- a/StringSwitch/Makefile
+++ b/StringSwitch/Makefile
@@ -1,7 +1,7 @@
 run: ../output/stringSwitch  
 	../output/stringSwitch
 
-%: %.cc
+%: %.cc stringSwitch.h cpp98style.h
 	g++ -std=c++11 -O2 -Wl,--no-as-needed -lpthread $< -o ../output/$@
 
 ../output/%: %.cc
